fixed some alignment issues

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,11 +8,6 @@ img
 {
 	height: 75px;
 }
-#master
-{
-	width: 800px;
-	height: 600px;
-}
 .content
 {
 	height: 500px;
